[gd_scene load_steps=7 format=3 uid="uid://ogv02rj6n4io"]

[ext_resource type="Script" uid="uid://b0ta4r5rymxa2" path="res://scripts/home_base.gd" id="1_hnk4e"]
[ext_resource type="Texture2D" uid="uid://b3y3yrf0yppd6" path="res://art/HomeBaseSprite.png" id="2_twqqb"]
[ext_resource type="Texture2D" uid="uid://cddx7e4a6orm8" path="res://art/food.jpg" id="3_qqhq3"]
[ext_resource type="Texture2D" uid="uid://u83ibn7do280" path="res://art/gold.jpg" id="3_r0i0a"]
[ext_resource type="Texture2D" uid="uid://dts1voymurh7j" path="res://art/log.jpg" id="4_vm7n1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_spwqx"]
size = Vector2(64.1666, 46)

[node name="HomeBase" type="Area2D"]
scale = Vector2(3, 3)
script = ExtResource("1_hnk4e")

[node name="BuildingSprite" type="Sprite2D" parent="."]
position = Vector2(32, 23.3333)
texture = ExtResource("2_twqqb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(31.9167, 23)
shape = SubResource("RectangleShape2D_spwqx")

[node name="HomeBaseStats" type="VBoxContainer" parent="."]
visible = false
offset_left = 65.0
offset_right = 155.0
offset_bottom = 101.0

[node name="GoldButton" type="Button" parent="HomeBaseStats"]
custom_minimum_size = Vector2(90, 25)
layout_mode = 2
text = "Gold: 0"
icon = ExtResource("3_r0i0a")
expand_icon = true

[node name="FoodButton" type="Button" parent="HomeBaseStats"]
layout_mode = 2
text = "Food: 0"
icon = ExtResource("3_qqhq3")
expand_icon = true

[node name="WoodButton" type="Button" parent="HomeBaseStats"]
layout_mode = 2
text = "Wood: 0"
icon = ExtResource("4_vm7n1")
expand_icon = true
